--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         <header class="header">
             <div class="container">
                 <div class="header-top">
+                    <!-- Logo -->
                     <a href="/">
                         <div class="logo">
                             <span class="logo__circle"></span>
@@ -108,6 +109,28 @@
                             </span>
                         </div>
                     </a>
+                    <!-- Navbar -->
+                    <nav class="navbar">
+                        <ul class="navbar__list">
+                            <li class="navbar__items">
+                                <a href="#!" class="navbar__link">Home</a>
+                            </li>
+                            <li class="navbar__items navbar__items--active">
+                                <a href="#!" class="navbar__link">Services</a>
+                            </li>
+                            <li class="navbar__items">
+                                <a href="#!" class="navbar__link">About</a>
+                            </li>
+                            <li class="navbar__items">
+                                <a href="#!" class="navbar__link">Doctors</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <!-- action -->
+                    <div class="action">
+                        <a href="#!" class="action__btn--login">Log In</a>
+                        <a href="#!" class="btn action__btn">Sign up</a>
+                    </div>
                 </div>
             </div>
         </header>
