--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     <body>
         <header class="header">
             <div class="container">
+                <!-- Header-top -->
                 <div class="header-top">
                     <!-- Logo -->
                     <a href="/">
@@ -132,6 +133,40 @@
                         <a href="#!" class="btn action__btn">Sign up</a>
                     </div>
                 </div>
+                <!-- Hero -->
+                <section class="hero">
+                    <!-- hero-content -->
+                    <section class="hero__content">
+                        <h1 class="hero__heading">
+                            Exceptional dental care for all ages.
+                        </h1>
+                        <p class="hero__desc">
+                            Exceptional dental care for all ages. Your great
+                            smile begins with a great dentist.
+                        </p>
+                        <div class="hero__row">
+                            <a href="#!" class="hero__btn btn">Book Online</a>
+                            <span class="hero__phone">
+                                or call (123) 456-7890
+                            </span>
+                        </div>
+                    </section>
+                    <!-- hero media -->
+                    <div class="hero__media">
+                        <figure class="hero__images">
+                            <img
+                                src="./assets/img/dental1.jpg"
+                                alt="dental"
+                                class="hero__img"
+                            />
+                            <img
+                                src="./assets/img/dental2.jpg"
+                                alt="dental"
+                                class="hero__img"
+                            />
+                        </figure>
+                    </div>
+                </section>
             </div>
         </header>
     </body>
