--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
                     <div class="hero__media">
                         <figure class="hero__images">
                             <img
-                                src="./assets/img/dental1.jpg"
+                                src="./assets/img/hero__1.png"
                                 alt="dental"
                                 class="hero__img"
                             />
                             <img
-                                src="./assets/img/dental2.jpg"
+                                src="./assets/img/hero__2.png"
                                 alt="dental"
                                 class="hero__img"
                             />
@@ -182,7 +182,7 @@
                     <div class="service-row">
                         <figure class="service__images">
                             <img
-                                src="./assets/img/service.jpg"
+                                src="./assets/img/service__1.png"
                                 alt="service"
                                 class="service__img"
                             />
