--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
+        <!-- header -->
         <header class="header">
             <div class="container">
                 <!-- Header-top -->
@@ -170,6 +171,7 @@
             </div>
         </header>
         <main style="height: 5000px">
+            <!-- service -->
             <section class="service">
                 <div class="container">
                     <h2 class="service__heading section-heading">
@@ -271,6 +273,90 @@
                             </section>
                             <a href="#!" class="btn service-btn">All Service</a>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section class="work">
+                <div class="container">
+                    <h2 class="section-heading">How it works</h2>
+                    <p class="work__desc section-desc">
+                        Exceptional dental care for all ages. Your great smile
+                        begins with a great dentist.
+                    </p>
+                    <div class="work__list">
+                        <!-- work item 1 -->
+                        <section class="work-item">
+                            <img
+                                src="./assets/icons/sreach.svg"
+                                alt=""
+                                class="work-item__icon"
+                            />
+                            <h3 class="work-item__heading">Search doctor</h3>
+                            <p class="work-item__desc section-desc">
+                                Search a doctor by education, qualifications or
+                                experience-contact for inquiry.
+                            </p>
+                            <a href="#!" class="work-item__more">Learn More</a>
+                        </section>
+                        <!-- work item 2 -->
+                        <section class="work-item">
+                            <img
+                                src="./assets/icons/Orion_find-user.svg"
+                                alt=""
+                                class="work-item__icon"
+                            />
+                            <h3 class="work-item__heading">Find best doctor</h3>
+                            <p class="work-item__desc section-desc">
+                                Search a doctor by education, qualifications or
+                                experience-contact for inquiry.
+                            </p>
+                            <a href="#!" class="work-item__more">Learn More</a>
+                        </section>
+                        <!-- work item 3 -->
+                        <section class="work-item">
+                            <img
+                                src="./assets/icons/bag.svg"
+                                alt=""
+                                class="work-item__icon"
+                            />
+                            <h3 class="work-item__heading">Get treatment</h3>
+                            <p class="work-item__desc section-desc">
+                                Search a doctor by education, qualifications or
+                                experience-contact for inquiry.
+                            </p>
+                            <a href="#!" class="work-item__more">Learn More</a>
+                        </section>
+                    </div>
+                </div>
+            </section>
+            <section class="feature">
+                <div class="container">
+                    <div class="feature__inner">
+                        <div class="feature__media">
+                            <figure class="feature__images">
+                                <img
+                                    src="./assets/icons/feature1.png"
+                                    alt=""
+                                    class="feature__img"
+                                />
+                                <img
+                                    src="./assets/icons/feature2.png"
+                                    alt=""
+                                    class="feature__img"
+                                />
+                            </figure>
+                        </div>
+                        <section class="feature__content">
+                            <h2 class="section-heading">
+                                Take back your smile with shine.
+                            </h2>
+                            <p class="section-desc">
+                                If you’re missing multiple teeth due to decay,
+                                injury, or the natural aging process, dentures
+                                might be the perfect solution.
+                            </p>
+                            <a href="" class="feature__cta btn">Learn More</a>
+                        </section>
                     </div>
                 </div>
             </section>
