lam phan member

--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
                     </div>
                 </div>
             </section>
+            <!-- work -->
             <section class="work">
                 <div class="container">
                     <h2 class="section-heading">How it works</h2>
@@ -357,6 +358,83 @@
                             </p>
                             <a href="" class="feature__cta btn">Learn More</a>
                         </section>
+                    </div>
+                </div>
+            </section>
+            <!-- member -->
+            <section class="member">
+                <div class="container">
+                    <h2 class="section-heading">Our virtual dentist</h2>
+                    <a class="feature__cta btn">Meet our dentist</a>
+                    <div class="member__list">
+                        <!--member item 1 -->
+                        <div class="member-item">
+                            <figure class="member__images">
+                                <img
+                                    src="./assets/img/menber1.png"
+                                    alt="member"
+                                    class="member__img"
+                                />
+                            </figure>
+                            <span class="member__name">Dr. Essence Page</span>
+                            <p class="desc">
+                                DDS, California - Linda University
+                            </p>
+                        </div>
+                        <!--member item 2 -->
+                        <div class="member-item">
+                            <figure class="member__images">
+                                <img
+                                    src="./assets/img/member2.png"
+                                    alt="member"
+                                    class="member__img"
+                                />
+                            </figure>
+                            <span class="member__name">Dr. Essence Page</span>
+                            <p class="desc">
+                                DDS, California - Linda University
+                            </p>
+                        </div>
+                        <!--member item 3 -->
+                        <div class="member-item">
+                            <figure class="member__images">
+                                <img
+                                    src="./assets/img/member3.png"
+                                    alt="member"
+                                    class="member__img"
+                                />
+                            </figure>
+                            <span class="member__name">Dr. Essence Page</span>
+                            <p class="desc">
+                                DDS, California - Linda University
+                            </p>
+                        </div>
+                        <!--member item 4 -->
+                        <div class="member-item">
+                            <figure class="member__images">
+                                <img
+                                    src="./assets/img/member4.png"
+                                    alt="member"
+                                    class="member__img"
+                                />
+                            </figure>
+                            <span class="member__name">Dr. Essence Page</span>
+                            <p class="desc">
+                                DDS, California - Linda University
+                            </p>
+                        </div>
+                        <div class="member__trans">
+                            <div class="member__cover">
+                                <svg width="6" height="12" viewBox="0 0 6 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M5.5 1L0.5 6L5.5 11" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                            </img></div>
+                            <div class="member__cover">
+                                <svg width="6" height="12" viewBox="0 0 6 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M0.5 1L5.5 6L0.5 11" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
