--- a/index.html
+++ b/index.html
@@ -364,8 +364,10 @@
             <!-- member -->
             <section class="member">
                 <div class="container">
-                    <h2 class="section-heading">Our virtual dentist</h2>
-                    <a class="feature__cta btn">Meet our dentist</a>
+                    <div class="member__header">
+                        <h2 class="section-heading">Our virtual dentist</h2>
+                        <a class="feature__cta btn">Meet our dentist</a>
+                    </div>
                     <div class="member__list">
                         <!--member item 1 -->
                         <div class="member-item">
@@ -377,7 +379,7 @@
                                 />
                             </figure>
                             <span class="member__name">Dr. Essence Page</span>
-                            <p class="desc">
+                            <p class="member__desc">
                                 DDS, California - Linda University
                             </p>
                         </div>
@@ -391,7 +393,7 @@
                                 />
                             </figure>
                             <span class="member__name">Dr. Essence Page</span>
-                            <p class="desc">
+                            <p class="member__desc">
                                 DDS, California - Linda University
                             </p>
                         </div>
@@ -405,7 +407,7 @@
                                 />
                             </figure>
                             <span class="member__name">Dr. Essence Page</span>
-                            <p class="desc">
+                            <p class="member__desc">
                                 DDS, California - Linda University
                             </p>
                         </div>
@@ -419,22 +421,47 @@
                                 />
                             </figure>
                             <span class="member__name">Dr. Essence Page</span>
-                            <p class="desc">
+                            <p class="member__desc">
                                 DDS, California - Linda University
                             </p>
                         </div>
-                        <div class="member__trans">
-                            <div class="member__cover">
-                                <svg width="6" height="12" viewBox="0 0 6 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M5.5 1L0.5 6L5.5 11" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
-                                    </svg>
-                            </img></div>
-                            <div class="member__cover">
-                                <svg width="6" height="12" viewBox="0 0 6 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M0.5 1L5.5 6L0.5 11" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
-                                    </svg>
-                            </div>
-                        </div>
+                    </div>
+                    <div class="member__control">
+                        <!-- previous -->
+                        <button class="member__control-btn">
+                            <svg
+                                width="6"
+                                height="12"
+                                viewBox="0 0 6 12"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M5.5 1L0.5 6L5.5 11"
+                                    stroke="currentColor"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
+                        <!-- next -->
+                        <button class="member__control-btn">
+                            <svg
+                                class="member__control--next-icon"
+                                width="6"
+                                height="12"
+                                viewBox="0 0 6 12"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M5.5 1L0.5 6L5.5 11"
+                                    stroke="currentColor"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
                     </div>
                 </div>
             </section>
