--- a/index.html
+++ b/index.html
@@ -465,6 +465,46 @@
                     </div>
                 </div>
             </section>
+            <!-- install -->
+            <section class="install">
+                <div class="container">
+                    <div class="install__inner">
+                        <figure>
+                            <img
+                                src="./assets/img/mobile-app.png"
+                                alt=""
+                                class="install__img"
+                            />
+                        </figure>
+                        <section class="install__content">
+                            <h2 class="install__heading section-heading">
+                                Take back your smile with dentures
+                            </h2>
+                            <p class="install__desc section-desc">
+                                If you’re missing multiple teeth due to decay,
+                                injury, or the natural aging process, dentures
+                                might be the perfect solution.
+                            </p>
+                            <div class="install__row">
+                                <a href="#!" class="install__btn">
+                                    <img
+                                        src="./assets/img/Google Play.svg"
+                                        alt="install google play"
+                                        class="install__btn-img"
+                                    />
+                                </a>
+                                <a href="#!" class="install__btn">
+                                    <img
+                                        src="./assets/img/App Store.svg"
+                                        alt="install app store"
+                                        class="install__btn-img"
+                                    />
+                                </a>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
