--- a/index.html
+++ b/index.html
@@ -505,6 +505,97 @@
                     </div>
                 </div>
             </section>
+            <!-- new -->
+            <section class="new">
+                <div class="container">
+                    <div class="new__container">
+                        <section class="new__info">
+                            <h2 class="section-heading new__heading">
+                                Read Latest News & Events.
+                            </h2>
+                            <a href="" class="new__link">Read All Blog</a>
+                            <div class="new__control member__control">
+                                <!-- previous -->
+                                <button class="member__control-btn">
+                                    <svg
+                                        width="6"
+                                        height="12"
+                                        viewBox="0 0 6 12"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M5.5 1L0.5 6L5.5 11"
+                                            stroke="currentColor"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </button>
+                                <!-- next -->
+                                <button class="member__control-btn">
+                                    <svg
+                                        class="member__control--next-icon"
+                                        width="6"
+                                        height="12"
+                                        viewBox="0 0 6 12"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M5.5 1L0.5 6L5.5 11"
+                                            stroke="currentColor"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </button>
+                        </section>
+                        <div class="new__list">
+                            <!-- new item 1 -->
+                            <div class="new__item">
+                                <figure>
+                                    <img
+                                        src="./assets/img/new1.jpg"
+                                        alt="Key Considerations for Regulatory Compliant."
+                                        class="new__img"
+                                    />
+                                </figure>
+                               <div class="new__item-info">
+                                    <h3 class="new__title">
+                                        Key Considerations for Regulatory Compliant.
+                                    </h3>
+                                    <div class="new__desc">
+                                        It’s easy to think about medical care from a
+                                        narrow perspective. You go to the hospital.
+                                    </div>
+                                    <a href="#!" class="new__more">Learn More</a>
+                               </div>
+                            </div>
+                            <!-- new item 2 -->
+                            <div class="new__item">
+                                <figure>
+                                    <img
+                                        src="./assets/img/new2.jpg"
+                                        alt="What Is Population Health Management?"
+                                        class="new__img"
+                                    />
+                                </figure>
+                                <div class="new__item-info">
+                                    <h3 class="new__title">
+                                        What Is Population Health Management?
+                                    </h3>
+                                    <div class="new__desc">
+                                        It’s easy to think about medical care from a
+                                        narrow perspective. You go to the hospital.
+                                    </div>
+                                    <a href="#!" class="new__more">Learn More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
