--- a/index.html
+++ b/index.html
@@ -596,6 +596,17 @@
                     </div>
                 </div>
             </section>
+            <!-- appointment -->
+            <section class="appointment">
+                <div class="container">
+                    <section class="appointment__body">
+                        <h2 class="section-heading appointment__heading">Always welcoming new patients</h2>
+                        <p class="appointment__desc">Take control of your dental health and get the personalized care you deserve.
+                 Call (541) 772-8846 to  schedule</p>
+                        <a href="#!" class="btn appointment__cta">Appointment</a>
+                     </section>
+                 </div>
+            </section>
         </main>
     </body>
 </html>
